[package]
name = "spreadsheet-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.18"
tui-markup = "0.1"
tui-logger = "0.8"
tuirealm = "^1.8.0"
tui-realm-treeview = "^1.0.0"
log = "0.4"
crossterm = "0.23"
tokio = { version = "1.20.1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
thiserror = "1.0"